@@ -1015,7 +1015,6 @@ eine &lt;a href=&quot;https://github.com/hneemann/Digital/issues/new?labels=enha
     <string name="msg_modelHasErrors">Es kann nur eine fehlerfreie Schaltung exportiert werden!</string>
     <string name="msg_noKVMapAvailable">Keine KV-Tafel verfügbar!</string>
     <string name="msg_dataNotUpdatedAnymore">Daten werden nicht mehr aktualisiert!</string>
-    <string name="msg_stringIsNotANumber_N">Der String {0} ist keine Zahl!</string>
 
     <string name="ok">Ok</string>
     <string name="rot_0">0°</string>
