@@ -921,7 +921,6 @@ The names of the variables may not be unique.</string>
     <string name="menu_pdfDocumentation">Documentation</string>
     <string name="menu_openPdfDocumentation">Open {0}</string>
     <string name="msg_errorOpeningDocumentation">Error opening a PDF file!</string>
-    <string name="msg_stringIsNotANumber_N">The string {0} is not a number!</string>
 
     <string name="message">&lt;h1&gt;Digital&lt;/h1&gt;A simple simulator for digital circuits.
 Written by H. Neemann in 2016, 2017.
